--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Flappy Bird Clone</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"> 
     <style>
@@ -12,7 +12,7 @@
       body {
         margin: 0;
         padding: 0;
-        background-image: url(https://ellisonleao.github.io/clumsy-bird/data/img/bg.png);
+        background-image: url("./img/bg.png");
         background-repeat: no-repeat;
         background-size: cover;
         overflow: hidden;
