Change start to space LOL

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <div class="container">
       <div class="modal">
-        <h1>PRESS START TO BEGIN</h1>
+        <h1>PRESS SPACE TO BEGIN</h1>
         <p class="score">SCORE: </p>
       </div>
     </div>
